typescript/checker/tests/conformance/expressions/commaOperator/commaOperatorOtherValidOperation.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            207,
        ),
        hi: BytePos(
            208,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorOtherValidOperation.ts:11:15
   |
11 |     return x, y;
   |               ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            233,
        ),
        hi: BytePos(
            236,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorOtherValidOperation.ts:13:22
   |
13 | var resultIsString = foo(1, "123");
   |                      ^^^

